# ETCS_ATP

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  INSTALL_DEPENDENCIES_WINDOWS.md  README_TRA_ATP.md  build_tra_atp.bat  build_tra_atp.sh  config.json  test_cmake_config.bat
DMI/: CMakeLists.txt  init.cpp  settings.ini  tra_atp_integration.cpp  tra_atp_integration.h  tra_atp_layout.json
DMI/Config/: config.cpp
DMI/graphics/: color.h  display.cpp  tra_components.cpp  tra_components.h
DMI/simrail/: shp_interface.cpp  shp_interface.h  simrail_api.cpp  simrail_api.h
DMI/window/: tra_menu.cpp  tra_menu.h  window_main.cpp
EVC/: CMakeLists.txt
locales/dmi/: zh_TW.po
